Segunda lista de exercícios - atualização.

--- a/notebooks/exercicios/segundaListaExerciciosPandas.ipynb
+++ b/notebooks/exercicios/segundaListaExerciciosPandas.ipynb
@@ -6,7 +6,9 @@
         "id": "uWtFMS3XQNCK"
       },
       "source": [
-        "# Notas para uso do Pandas"
+         "# Exercícios para uso do pacote Pandas"
+        "## A partir dos exemplos baixo, explore o dataset da campanha de vacinação para Covid-19 baixado durante a oficina."
+        "### Você deve gerar um relatório com a análise exploratória da base."
       ]
     },
     {
